Made some changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,44 @@
-Custom properties/variables:root {
- --main-white: #f0f0f0;
- --main-red: #be3144;
- --main-blue: #45567d;
- --main-gray: #303841;
-}
-
-/* Base reset */
-* {
- margin: 0;
- padding: 0;
-}
-
-/* box-sizing and font sizing */
 *,
 *::before,
 *::after {
  box-sizing: inherit;
 }
 
+* {
+ margin: 0;
+ padding: 0;
+}
+
 html {
  box-sizing: border-box;
-
- /* Set font size for easy rem calculations
-   * default document font size = 16px, 1rem = 16px, 100% = 16px
-   * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-  */
  font-size: 62.5%;
  scroll-behavior: smooth;
 }
 
-/* A few media query to set some font sizes at different screen sizes.
- * This helps automate a bit of responsiveness.
- * The trick is to use the rem unit for size values, margin and padding.
- * Because rem is relative to the document font size
- * when we scale up or down the font size on the document
- * it will affect all properties using rem units for the values.
-*/
-
-/* I am using the em unit for breakpoints
- * The calculation is the following
- * screen size divided by browser base font size
- * As an example: a breakpoint at 980px
- * 980px / 16px = 61.25em
-*/
-
-/* 1200px / 16px = 75em */
 @media (max-width: 75em) {
  html {
   font-size: 60%;
  }
 }
 
-/* 980px / 16px = 61.25em */
 @media (max-width: 61.25em) {
  html {
   font-size: 58%;
  }
 }
 
-/* 460px / 16px = 28.75em */
 @media (max-width: 28.75em) {
  html {
   font-size: 55%;
  }
 }
 
-/* Base styles */
-
 body {
  font-family: 'Poppins', sans-serif;
  font-size: 1.8rem;
- /* 18px */
  font-weight: 400;
  line-height: 1.4;
- color: var(--main-white);
+ color: #303841;
 }
 
 h1,
@@ -97,15 +62,13 @@ ul {
 
 a {
  text-decoration: none;
- color: var(--main-white);
+ color: #fff;
 }
 
 img {
  display: block;
  width: 100%;
 }
-
-/* nav */
 
 .nav {
  display: flex;
@@ -114,7 +77,7 @@ img {
  top: 0;
  left: 0;
  width: 100%;
- background: var(--main-red);
+ background: #be3144;
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
  z-index: 10;
 }
@@ -141,10 +104,8 @@ img {
 }
 
 .nav-list a:hover {
- background: var(--main-blue);
+ background: #45567d;
 }
-
-/* Welcome section */
 
 .welcome-section {
  display: flex;
@@ -161,21 +122,20 @@ img {
  font-size: 3rem;
  font-weight: 200;
  font-style: italic;
- color: var(--main-red);
+ color: #be3144;
 }
 
-/* Projects section */
 
 .projects-section {
  text-align: center;
  padding: 10rem 2rem;
- background: var(--main-blue);
+ background: #45567d;
 }
 
 .projects-section-header {
  max-width: 640px;
  margin: 0 auto 6rem auto;
- border-bottom: 0.2rem solid var(--main-white);
+ border-bottom: 0.2rem solid #fff;
 }
 
 @media (max-width: 28.75em) {
@@ -184,7 +144,6 @@ img {
  }
 }
 
-/* "Automagic" image grid using no media queries */
 .projects-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -206,13 +165,13 @@ img {
 }
 
 .project {
- background: var(--main-gray);
+ background: #303841;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
 }
 
 .code {
- color: var(--main-gray);
+ color: #303841;
  transition: color 0.3s ease-out;
 }
 
@@ -239,12 +198,12 @@ img {
 
 .btn-show-all {
  font-size: 2rem;
- background: var(--main-gray);
+ background: #303841;
  transition: background 0.3s ease-out;
 }
 
 .btn-show-all:hover {
- background: var(--main-red);
+ background: #be3144;
 }
 
 .btn-show-all:hover>i {
@@ -257,8 +216,6 @@ img {
  transition: transform 0.3s ease-out;
 }
 
-/* Contact section */
-
 .contact-section {
  display: flex;
  flex-direction: column;
@@ -268,7 +225,7 @@ img {
  width: 100%;
  height: 80vh;
  padding: 0 2rem;
- background: var(--main-gray);
+ background: #303841;
 }
 
 .contact-section-header>h2 {
@@ -304,15 +261,13 @@ img {
  transform: translateY(8px);
 }
 
-/* Footer */
-
 footer {
  font-weight: 300;
  display: flex;
  justify-content: space-evenly;
  padding: 2rem;
- background: var(--main-gray);
- border-top: 4px solid var(--main-red);
+ background: #303841;
+ border-top: 4px solid #be3144;
 }
 
 footer>p {
