--- a/css/style.css
+++ b/css/style.css
@@ -198,4 +198,42 @@ img {
 
 .btn-show-all {
  font-size: 2rem;
- 
+ background: #303841;
+ transition: background 0.3s ease-out;
+}
+
+.btn-show-all:hover {
+ background: #be3144;
+}
+
+.btn-show-all:hover>i {
+ transform: translateX(2px);
+}
+
+.btn-show-all>i {
+ margin-left: 10px;
+ transform: translateX(0);
+ transition: transform 0.3s ease-out;
+}
+
+.contact-section {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ width: 100%;
+ height: 80vh;
+ padding: 0 2rem;
+ background: #303841;
+}
+
+.contact-section-header>h2 {
+ font-size: 6rem;
+}
+
+@media (max-width: 28.75em) {
+ .contact-section-header>h2 {
+  font-size: 4rem;
+ }
+}
