--- a/css/style.css
+++ b/css/style.css
@@ -237,3 +237,49 @@ img {
   font-size: 4rem;
  }
 }
+.contact-section-header>p {
+ font-style: italic;
+}
+
+.contact-links {
+ display: flex;
+ justify-content: center;
+ width: 100%;
+ max-width: 980px;
+ margin-top: 4rem;
+ flex-wrap: wrap;
+}
+
+.contact-details {
+ font-size: 2.4rem;
+ text-shadow: 2px 2px 1px #1f1f1f;
+ transition: transform 0.3s ease-out;
+}
+
+.contact-details:hover {
+ transform: translateY(8px);
+}
+
+footer {
+ font-weight: 300;
+ display: flex;
+ justify-content: space-evenly;
+ padding: 2rem;
+ background: #303841;
+ border-top: 4px solid #be3144;
+}
+
+footer>p {
+ margin: 2rem;
+}
+
+footer i {
+ vertical-align: middle;
+}
+
+@media (max-width: 28.75em) {
+ footer {
+  flex-direction: column;
+  text-align: center;
+ }
+}
